# dll-cmake-learn

./: CMakeLists.txt  main.cpp
lib/: some_lib.cpp  some_lib.h
